<resources>
    <string name="app_name">TODoList Extended</string>
    <string name="name_hint">Wpisz nazwę zadania</string>
    <string name="name_label">Nazwa</string>
    <string name="desc_hint">Opis zadania</string>
    <string name="desc_label">Opis</string>
    <string name="details_label">Data</string>
    <string name="done_label">Wykonane</string>
    <string name="task_add_new">Nowe zadanie</string>
    <string name="clear_search">Wyczyść wyszukiwanie</string>
    <string name="search">Wyszukaj</string>
    <string name="default_name">"Pilne zadanie numer "</string>
    <string name="task_delete">Usunięto zadanie</string>
    <string name="task_added">Dodano zadanie</string>
    <string name="task_edited">Edytowani zadanie</string>
    <string name="name_empty">Nazwa jest pusta</string>
    <string name="localization_hint">Wciśnij przycisk, aby pobrać  lokalizację</string>
    <string name="location_permission_denied">Brak dostępu do lokalizacji</string>
    <string name="location_text">Szerokość geograficzna: %1$.4f \n Długość geograficzna: %2$.4f \n Czas: %3$tr</string>
    <string name="no_location">Brak lokalizacji</string>
    <string name="address_text">Adres: %1$s   Czas: %2$tr</string>
    <string name="service_not_available">Niedostępne</string>
    <string name="no_address_found">Nie znaleziono adresu</string>
    <string name="save">Zapisz</string>
    <string name="read_location">Pobierz lokalizację</string>
    <string name="open_map">Otwórz mapę</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="prev">Poprz</string>
    <string name="next">Nast</string>
    <string name="monday">Poniedziałek</string>
    <string name="day">DZIEŃ</string>
    <string name="header">Witaj w TODO świecie</string>
    <string name="date">Podaj datę</string>
    <string name="loc_message">Aktualna lokalizacja</string>
</resources>