<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E8F25D"

    >
    <LinearLayout
    android:id="@+id/edit_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:orientation="vertical"
    tools:context=".AddEditTaskActivity"
    >

    <TextView
        android:id="@+id/task_name_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:textColor="@color/black"
        style="@style/TextFieldStyle"
        />
    <!--    style="?android:listSeparatorTextViewStyle"-->

    <EditText
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:textColor="@color/black"
        style="@style/TextFieldStyle"/>
    <TextView
        android:id="@+id/task_description_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_label"
        android:textColor="@color/black"
        style="@style/TextFieldStyle"
        />
    <!--    style="?android:listSeparatorTextViewStyle"-->

    <EditText
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desc_hint"
        android:textColor="@color/black"
        style="@style/TextFieldStyle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_label"
        style="@style/TextFieldStyle"/>
    <!--    style="?android:listSeparatorTextViewStyle"-->
    <EditText
        android:id="@+id/task_date"
        style="@style/TextFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/date"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="date"
         />

        <Spinner
            android:id="@+id/task_category"
            style="@style/TextFieldStyle"
            android:layout_width="158dp"
            android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/task_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done_label"
        android:textAlignment="viewStart"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textview_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/localization_hint"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

        <Button
            android:id="@+id/get_location_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink69"
            android:text="@string/read_location"
            android:textAlignment="center"
            android:textSize="12sp" />

    <Button
        android:id="@+id/open_maps_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_map"
        android:textAlignment="center"
        android:textSize="12sp"
        android:backgroundTint="@color/pink69"
        />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink69"
        android:text="@string/save" />

</LinearLayout>
</LinearLayout>